--- a/src/my-app.html
+++ b/src/my-app.html
@@ -79,7 +79,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="view2" href="/view2">View Two</a>
           <a name="view3" href="/view3">View Three</a>
           <a name="new-view" href="/new-view">New View</a>
-          <a name="my-graph-lab" href="/my-graph-lab">Graph Lab</a>
+          <a name="graph-lab" href="/graph-lab">Graph Lab</a>
         </iron-selector>
       </app-drawer>
 
@@ -98,7 +98,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <my-view2 name="view2"></my-view2>
           <my-view3 name="view3"></my-view3>
           <my-new-view name="new-view"></my-new-view>
-          <my-graph-lab name="my-graph-lab"></my-graph-lab>
+          <my-graph-lab name="graph-lab"></my-graph-lab>
         </iron-pages>
 
       </app-header-layout>
